# HungryDot

./: .gitignore  Arrow.cpp  Arrow.h  ArrowsPool.cpp  ArrowsPool.h  BaseState.h  CMakeLists.txt  EventManager.cpp  EventManager.h  Game.cpp  Game.h  HungryDot  HungryDot.cpp  HungryDot.h  Makefile  README.md  StateIntro.cpp  StateIntro.h  StateManager.cpp  StateManager.h  Window.cpp  Window.h  World.cpp  World.h  buildScript.sh  configFile  main.cpp
Media/: Score
externalLibs/: AddSfmlLibs.cmake  libsfml-audio.2.5.1.dylib  libsfml-graphics.dylib  libsfml-network.2.5.1.dylib  libsfml-system.2.5.dylib  libsfml-window.2.5.dylib
include/: Application.h  Arrow.h  ArrowsPool.h  BaseState.h  Button.h  CMakeLists.txt  Cannon.h  DataBase.h  FpsRegulator.h  Game.h  Globals.h  HungryDot.h  StateGame.h  StateGame.hpp  StateGameOver.h  StateIntro.h  StateLeaderBoard.h  StateMenu.h  StateRegister.h  StateStack.h  TextBox.h  Window.h  World.h
include/gameElements/: Arrow.h  CMakeLists.txt  HungryDot.h
include/menuComponents/: Button.h  Component.h  Label.h  TextBox.h
include/otherComponents/: Application.h  ArrowsPool.h  AudioPlayer.h  DataBase.h  InputEvents.h  MediaResources.h  Window.h
include/states/: BaseState.h  StateGame.h  StateGameOver.h  StateIntro.h  StateLeaderBoard.h
sources/: Application.cpp  Arrow.cpp  ArrowsPool.cpp  AudioPlayer.cpp  Button.cpp  CMakeLists.txt  Component.cpp  DataBase.cpp  FpsRegulator.cpp  Game.cpp  Globals.cpp  HungryDot.cpp  StateGame.cpp  StateGameOver.cpp  StateIntro.cpp  StateLeaderBoard.cpp  StateMenu.cpp  StateRegister.cpp  StateStack.cpp  Timer.cpp  Timer.h  Window.cpp  World.cpp  main.cpp
sources/gameElements/: Arrow.cpp  Cannon.cpp  HungryDot.cpp
sources/menuComponents/: Button.cpp  Label.cpp  TextBox.cpp
sources/otherComponents/: Application.cpp  AudioPlayer.cpp  DataBase.cpp  FpsRegulator.cpp  MediaResources.cpp  Window.cpp  World.cpp
(+6 files in other folders)
